--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "flowise-embed-react",
+  "name": "codenula-embed-react",
   "version": "1.0.7",
-  "description": "React library to display flowise chatbot on your website",
+  "description": "React library to display codenula chatbot on your website",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
@@ -24,8 +24,8 @@
     "@rollup/plugin-typescript": "11.0.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.32",
+    "codenula-embed-v2": "^1.0.0",
     "eslint": "8.37.0",
-    "flowise-embed": "latest",
     "react": "19.0.0",
     "rollup": "3.20.2",
     "rollup-plugin-typescript-paths": "1.4.0",
@@ -34,7 +34,7 @@
     "typescript": "5.0.3"
   },
   "peerDependencies": {
-    "flowise-embed": "*",
+    "codenula-embed-v2": "*",
     "react": "18.x"
   }
 }
