--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "codenula-embed-react",
-  "version": "1.0.7",
+  "name": "codenula-embed-react-v2",
+  "version": "1.0.1",
   "description": "React library to display codenula chatbot on your website",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
